# TOP_with_MMP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
help/: Compiling_optimized_PETSc_for_AMD_CPUs.md  Compiling_optimized_PETSc_for_INTEL_CPUs.md
src/: OC.c  PreMixFEM_3D.c  PreMixFEM_3D.h  PreMixFEM_3D1.c  ex42.c  main.c  main2.c  main3.c  newPre.c  newtest.c  spe10.c  test.c  testDM.c
src/pymma/: demo.py  mma.py  test.py
src/test/: A.c  functiontest.c  testkappa.c
src/topopt/: demo.c  ex3.c  filter.c  func.c  func.h  myc.c  test.c
src/topopt3D/: MMA.c  MMA.cc  MMA.h  oCriteria.c  oCriteria.h  optimization.c  optimization.h  system.c  system.h
